listo vinculos y formularios

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MNP</title>
 </head>
+
 <body>
     <header>
 
@@ -15,7 +17,6 @@
                 <ul>
                     <li> <a href="./index.html"> <img src="./img/logo.png" alt="Logo"></a></li>
                     <li>Buscar</li>
-                    <li></li>
                 </ul>
 
             </section>
@@ -23,8 +24,8 @@
             <section>
 
                 <ul>
-                    <li>Login</li>
-                    <li>Registrate</li>
+                    <li> <a href="./login.html">Login</a></li>
+                    <li> <a href="./register.html">Registrate</a></li>
                 </ul>
 
             </section>
@@ -40,7 +41,6 @@
             <article></article>
 
         </section>
-
     </main>
 
     <footer>
@@ -52,6 +52,7 @@
         </section>
 
     </footer>
-    
+
 </body>
+
 </html>
