--- a/login.html
+++ b/login.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <section>
+                <ul>
+                    <li> <a href="./index.html"> <img src="./img/logo.png" alt="Logo"></a></li>
+                    <li>Buscar</li>
+                </ul>
+            </section>
+
+            <section>
+                <ul>
+                    <li> <a href="./login.html">Login</a></li>
+                    <li> <a href="./register.html">Registrate</a></li>
+                </ul>
+            </section>
+        </nav>
+    </header>
+
+    <form action="">
+        <section class="seccionlogin">
+            <article class="articulologin">
+                <div></div>
+                <h1>Login</h1>
+                </div>
+                <div>
+                    <label for="email" class="texto">Email:</label>
+                </div>
+                <div>
+                    <input id="email" type="email" name="email" value="">
+                </div>
+                <div>
+                    <label for="contraseña" class="texto">Contraseña:</label>
+                </div>
+                <div>
+                    <input id="password" type="password" name="pass" value="">
+                </div>
+                <div>
+                    <button>Ingresar</button>
+                </div>
+                <div>
+                    <a href="./register.html">No tengo cuenta</a>
+                </div>
+    </form>
+
+    <footer>
+        <section>
+            <p>Juliana Markman</p>
+            <p>Ana Clara Nuñez Ibañez</p>
+            <p>Mateo Peña</p>
+        </section>
+    </footer>
 </body>
+
 </html>
