--- a/register.html
+++ b/register.html
@@ -1,11 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrate</title>
+    <title>Register</title>
 </head>
+
 <body>
-    
+    <header>
+
+        <nav>
+
+            <section>
+
+                <ul>
+                    <li> <a href="./index.html"> <img src="./img/logo.png" alt="Logo"></a></li>
+                    <li>Buscar</li>
+                </ul>
+
+            </section>
+
+            <section>
+
+                <ul>
+                    <li> <a href="./login.html">Login</a></li>
+                    <li> <a href="./register.html">Registrate</a></li>
+                </ul>
+            </section>
+        </nav>
+    </header>
+
+    <section class="seccionlogin">
+        <article class="articuloregistrate">
+            <h1 class="bienvenido">REGISTRATE</h1>
+            <form action="results.html" method="GET">
+                <div>
+                    <label class="texto" for="email">Email:</label>
+                </div>
+                <div>
+                    <input id="email" type="email" name="mail" value="">
+                </div>
+                <div>
+                    <label class="texto" for="contraseña">Contraseña:</label>
+                </div>
+                <div>
+                    <input id="password" type="password" name="pass" value="">
+                </div>
+                <div>
+                    <label class="texto" for="contraseña">Repetir contraseña:</label>
+                </div>
+                <div>
+                    <input id="password" type="password" name="pass" value="">
+                </div>
+                <div>
+                    <button type="submit">Registrarme</button>
+                </div>
+                <div>
+                    <label>
+                        <input type="checkbox" name="hobbies" value="acepto"> Acepto términos y condiciones
+                    </label>
+                </div>
+                <div>
+                    <a href="./login.html">Ya tengo cuenta</a>
+                </div>
+
+        </article>
+    </section>
+    </form>
+
+
+
+
+    <footer>
+
+        <section>
+            <p>Juliana Markman</p>
+            <p>Ana Clara Nuñez Ibañez</p>
+            <p>Mateo Peña</p>
+        </section>
+
+    </footer>
 </body>
+
 </html>
