--- a/product.html
+++ b/product.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos</title>
+    <title>Product</title>
 </head>
+
 <body>
-    
+    <header>
+
+        <nav>
+
+            <section>
+
+                <ul>
+                    <li> <a href="./index.html"> <img src="./img/logo.png" alt="Logo"></a></li>
+                    <li>Buscar</li>
+                </ul>
+
+            </section>
+
+            <section>
+
+                <ul>
+                    <li> <a href="./login.html">Login</a></li>
+                    <li> <a href="./register.html">Registrate</a></li>
+                </ul>
+
+            </section>
+
+        </nav>
+
+    </header>
+    <footer>
+        <section>
+            <p>Juliana Markman</p>
+            <p>Ana Clara Nuñez Ibañez</p>
+            <p>Mateo Peña</p>
+        </section>
+
+    </footer>
 </body>
+
 </html>
