--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
                 <ul>
                     <li> <a href="./index.html"> <img src="./img/logo.png" alt="Logo"></a></li>
                     <li>Buscar</li>
-                    <li></li>
                 </ul>
 
             </section>
@@ -23,8 +22,8 @@
             <section>
 
                 <ul>
-                    <li>Login</li>
-                    <li>Registrate</li>
+                    <li><a href="./login.html">Login</a></li>
+                    <li><a href="./register.html">Registrate</a></li>
                 </ul>
 
             </section>
@@ -35,10 +34,118 @@
 
     <main>
 
+        
+        <aside>
+            <section>
+                <h3>Categorias</h3>
+                <ul>
+                    <li><a href="./category.html">beauty</a></li>
+                    <li><a href="./category.html">fragrances</a></li>
+                    <li><a href="./category.html">furniture</a></li>
+                    <li><a href="./category.html">groceries</a></li>
+                    <li><a href="./category.html">home decoration</a></li>
+                    <li><a href="./category.html">kitchen accessories</a></li>
+                    <li><a href="./category.html">laptops</a></li>
+                    <li><a href="./category.html">mens shirts</a></li>
+                    <li><a href="./category.html">mens shoes</a></li>
+                    <li><a href="./category.html">mens watches</a></li>
+                    <li><a href="./category.html">mobile accessories</a></li>
+                    <li><a href="./category.html">motorcycle</a></li>
+                    <li><a href="./category.html">skin care</a></li>
+                    <li><a href="./category.html">smartphones</a></li>
+                    <li><a href="./category.html">sports accessories</a></li>
+                    <li><a href="./category.html">sunglasses</a></li>
+                    <li><a href="./category.html">tablets</a></li>
+                    <li><a href="./category.html">tops</a></li>
+                    <li><a href="./category.html">vehicle</a></li>
+                    <li><a href="./category.html">womens bags</a></li>
+                    <li><a href="./category.html">womens dresses</a></li>
+                    <li><a href="./category.html">womens jewellery</a></li>
+                    <li><a href="./category.html">womens shoes</a></li>
+                    <li><a href="./category.html">womens watches</a></li>
+                </ul>
+            </section>
+        </aside>
+
         <section>
+            <h2>Productos</h2>
 
-            <article></article>
+            <article>
+                <h4>Camisa Blanca</h4>
+                <img src="./img/camisa.jpeg" alt="camisa">
+                <p>Camisa de algodón clásica, manga larga.</p>
+                <p class="precio">$22.000</p>
+                <a class="verDetalle" href="./product.html">Ver detalle</a>
+            </article>
 
+            <article>
+                <h4>Crema Cera Ve</h4>
+                <img src="./img/crema.jpg" alt="crema">
+                <p>Crema ligera que nutre y suaviza la piel.</p>
+                <p class="precio">$8.500</p>
+                <a class="verDetalle" href="./product.html">Ver detalle</a>
+            </article>
+
+            <article>
+                <h4>Juego de cuchillos</h4>
+                <img src="./img/cuchillos.jpg" alt="cuchillos">
+                <p>Set de cuchillos de acero inoxidable.</p>
+                <p class="precio">$18.000</p>
+                <a class="verDetalle" href="./product.html">Ver detalle</a>
+            </article>
+
+            <article>
+                <h4>Galletitas Today</h4>
+                <img src="./img/galletitas.jpg" alt="galletitas">
+                <p>Galletitas dulces clásicas, ideales para la merienda.</p>
+                <p class="precio">$1.500</p>
+                <a class="verDetalle" href="./product.html">Ver detalle</a>
+            </article>
+
+            <article>
+                <h4>Mochila Tropea</h4>
+                <img src="./img/mochila.jpg" alt="mochila">
+                <p>Mochila negra de tela con varios bolsillos.</p>
+                <p class="precio">$34.500</p>
+                <a class="verDetalle" href="./product.html">Ver detalle</a>
+            </article>
+
+            <article>
+                <h4>Perfume de Hombre</h4>
+                <img src="./img/perfume.jpg" alt="perfume">
+                <p>Fragancia floral con notas frescas y elegantes.</p>
+                <p class="precio">$25.000</p>
+                <a class="verDetalle" href="./product.html">Ver detalle</a>
+            </article>
+
+            <article>
+                <h4>Silla Gamer</h4>
+                <img src="./img/silla_gamer.jfif" alt="silla">
+                <p>Silla ergonómica con apoyabrazos y respaldo reclinable.</p>
+                <p class="precio">$95.000</p>
+                <a class="verDetalle" href="./product.html">Ver detalle</a>
+            </article>
+
+            <article>
+                <h4>Tablet Lenovo</h4>
+                <img src="./img/tablet.jpg" alt="tablet">
+                <p>Pantalla 10”, ideal para estudio y entretenimiento.</p>
+                <p class="precio">$180.000</p>
+                <a class="verDetalle" href="./product.html">Ver detalle</a>
+            </article>
+
+            <article>
+                <h4>Vestido Azul</h4>
+                <img src="./img/vestido.jpg" alt="vestido">
+                <p>Vestido corto azul, estilo casual.</p>
+                <p class="precio">$26.000</p>
+                <a class="verDetalle" href="./product.html">Ver detalle</a>
+            </article>
+
+        </section>
+
+        <section>
+            <h2>Productos más Vendidos</h2>
         </section>
 
     </main>
@@ -52,6 +159,6 @@
         </section>
 
     </footer>
-    
+
 </body>
 </html>
