--- a/product.html
+++ b/product.html
@@ -6,6 +6,74 @@
     <title>Productos</title>
 </head>
 <body>
-    
+    <header>
+
+        <nav>
+
+            <section>
+
+                <ul>
+                    <li> <a href="./index.html"> <img src="./img/logo.png" alt="Logo"></a></li>
+                    <li>Buscar</li>
+                </ul>
+
+            </section>
+
+            <section>
+
+                <ul>
+                    <li><a href="./login.html">Login</a></li>
+                    <li><a href="./register.html">Registrate</a></li>
+                </ul>
+
+            </section>
+
+        </nav>
+
+    </header>
+
+    <main>
+        <aside>
+            <section>
+                <h3>Categorias</h3>
+                <ul>
+                    <li><a href="./category.html">beauty</a></li>
+                    <li><a href="./category.html">fragrances</a></li>
+                    <li><a href="./category.html">furniture</a></li>
+                    <li><a href="./category.html">groceries</a></li>
+                    <li><a href="./category.html">home decoration</a></li>
+                    <li><a href="./category.html">kitchen accessories</a></li>
+                    <li><a href="./category.html">laptops</a></li>
+                    <li><a href="./category.html">mens shirts</a></li>
+                    <li><a href="./category.html">mens shoes</a></li>
+                    <li><a href="./category.html">mens watches</a></li>
+                    <li><a href="./category.html">mobile accessories</a></li>
+                    <li><a href="./category.html">motorcycle</a></li>
+                    <li><a href="./category.html">skin care</a></li>
+                    <li><a href="./category.html">smartphones</a></li>
+                    <li><a href="./category.html">sports accessories</a></li>
+                    <li><a href="./category.html">sunglasses</a></li>
+                    <li><a href="./category.html">tablets</a></li>
+                    <li><a href="./category.html">tops</a></li>
+                    <li><a href="./category.html">vehicle</a></li>
+                    <li><a href="./category.html">womens bags</a></li>
+                    <li><a href="./category.html">womens dresses</a></li>
+                    <li><a href="./category.html">womens jewellery</a></li>
+                    <li><a href="./category.html">womens shoes</a></li>
+                    <li><a href="./category.html">womens watches</a></li>
+                </ul>
+            </section>
+        </aside>
+    </main>
+
+    <footer>
+
+        <section>
+            <p>Juliana Markman</p>
+            <p>Ana Clara Nuñez Ibañez</p>
+            <p>Mateo Peña</p>
+        </section>
+
+    </footer>
 </body>
 </html>
