Hice cambios en los html

--- a/category.html
+++ b/category.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Category</title>
+
+    <link rel="stylesheet" href="./css/styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -33,6 +40,105 @@
         </nav>
 
     </header>
+
+    <main>
+
+        <aside>
+            <section>
+                <h3>Categorias</h3>
+                <ul>
+                    <li><a href="./category.html">beauty</a></li>
+                    <li><a href="./category.html">fragrances</a></li>
+                    <li><a href="./category.html">furniture</a></li>
+                    <li><a href="./category.html">groceries</a></li>
+                    <li><a href="./category.html">home decoration</a></li>
+                    <li><a href="./category.html">kitchen accessories</a></li>
+                    <li><a href="./category.html">laptops</a></li>
+                    <li><a href="./category.html">mens shirts</a></li>
+                    <li><a href="./category.html">mens shoes</a></li>
+                    <li><a href="./category.html">mens watches</a></li>
+                    <li><a href="./category.html">mobile accessories</a></li>
+                    <li><a href="./category.html">motorcycle</a></li>
+                    <li><a href="./category.html">skin care</a></li>
+                    <li><a href="./category.html">smartphones</a></li>
+                    <li><a href="./category.html">sports accessories</a></li>
+                    <li><a href="./category.html">sunglasses</a></li>
+                    <li><a href="./category.html">tablets</a></li>
+                    <li><a href="./category.html">tops</a></li>
+                    <li><a href="./category.html">vehicle</a></li>
+                    <li><a href="./category.html">womens bags</a></li>
+                    <li><a href="./category.html">womens dresses</a></li>
+                    <li><a href="./category.html">womens jewellery</a></li>
+                    <li><a href="./category.html">womens shoes</a></li>
+                    <li><a href="./category.html">womens watches</a></li>
+                </ul>
+            </section>
+        </aside>
+
+        <section>
+            <h2>Groceries</h2>
+
+            <article>
+                <h4>Galletitas Today</h4>
+                <img src="./img/galletitas.jpg" alt="galletitas">
+                <p>Galletitas dulces clásicas, ideales para la merienda.</p>
+                <p class="precio">$1.500</p>
+                <a class="verDetalle" href="./product.html">Ver detalle</a>
+            </article>
+
+            <article>
+                <h4>Leche Entera La Serenísima 1L</h4>
+                <img src="./img/leche.jpg" alt="leche">
+                <p>Leche fresca y natural, ideal para tomar o cocinar.</p>
+                <p class="precio">$350</p>
+                <a class="verDetalle" href="./product.html">Ver detalle</a>
+            </article>
+
+            <article>
+                <h4>Pan de Molde Bimbo</h4>
+                <img src="./img/pan.jpg" alt="pan">
+                <p>Pan suave y esponjoso, perfecto para sandwiches o tostadas.</p>
+                <p class="precio">$500</p>
+                <a class="verDetalle" href="./product.html">Ver detalle</a>
+            </article>
+
+            <article>
+                <h4>Arroz Gallo Oro 1kg</h4>
+                <img src="./img/arroz.jpg" alt="arroz">
+                <p>Arroz de calidad premium, ideal para cualquier receta.</p>
+                <p class="precio">$420</p>
+                <a class="verDetalle" href="./product.html">Ver detalle</a>
+            </article>
+
+            <article>
+                <h4>Aceite Cocinero 900ml</h4>
+                <img src="./img/aceite.jpg" alt="aceite">
+                <p>Aceite vegetal para freír, cocinar y aderezar tus comidas.</p>
+                <p class="precio">$1.800</p>
+                <a class="verDetalle" href="./product.html">Ver detalle</a>
+            </article>
+
+            <article>
+                <h4>Fideos Knorr 500g</h4>
+                <img src="./img/fideos.jpg" alt="fideos">
+                <p>Fideos de trigo de alta calidad, ideales para cualquier tipo de pasta.</p>
+                <p class="precio">$300</p>
+                <a class="verDetalle" href="./product.html">Ver detalle</a>
+            </article>
+
+            <article>
+                <h4>Azúcar Ledesma 1kg</h4>
+                <img src="./img/azucar.jpg" alt="silla">
+                <p>Azúcar blanca refinada, perfecta para postres y bebidas.</p>
+                <p class="precio">$900</p>
+                <a class="verDetalle" href="./product.html">Ver detalle</a>
+            </article>
+
+
+        </section>
+
+    </main>
+
     <footer>
 
         <section>
