--- a/product.html
+++ b/product.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product</title>
+
+    <link rel="stylesheet" href="./css/styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -66,6 +73,79 @@
                 </ul>
             </section>
         </aside>
+
+        <section>
+            <h2>Galletitas Today</h2>
+            <img src="./img/galletitas.jpg" alt="galletitas">
+            <article>
+                <p class="subt_product">Marca: </p>
+                <p>Today</p>
+            </article>
+            
+            <article>
+                <p>Galletitas dulces crocantes, rellenas de crema sabor chocolate. Ideales para acompañar con leche, café o como snack en cualquier momento del día. Su empaque práctico las hace fáciles de llevar a la escuela, trabajo o salidas.</p>
+            </article>
+    
+            <article>
+                <p class="subt_product">Precio: </p>
+                <p>$1.500</p>
+            </article>
+
+            <article>
+                <p class="subt_product">Categoria: </p>
+                <p>Groseries</p>
+            </article>
+
+            <article>
+                <p class="subt_product">Stock: </p>
+                <p>18.000 unidades</p>
+            </article>
+
+            <article>
+                <p class="subt_product">Tags: </p>
+                <p>snack, dulce, merienda</p>
+            </article>
+        </section>
+
+        <section>
+            <h3>Comentarios</h3>
+            <article>
+                <p>⭐⭐⭐⭐⭐</p>
+                <p>Las de siempre, riquísimas</p>
+                <p>02/09/2025</p>
+                <p>Ana</p>
+            </article>
+
+            <article>
+                <p>⭐⭐⭐⭐⭐</p>
+                <p>Siempre me alegran la merienda, ¡incomparables!</p>
+                <p>05/09/2025</p>
+                <p>Carla</p>
+            </article>
+
+            <article>
+                <p>⭐⭐⭐⭐⭐</p>
+                <p>“Crujientes y dulces justo como me gustan. Las compro siempre.</p>
+                <p>07/09/2025</p>
+                <p>Martín</p>
+            </article>
+
+            <article>
+                <p>⭐⭐⭐⭐⭐</p>
+                <p>No pueden faltar en mi casa, ¡son un clásico!</p>
+                <p>10/09/2025</p>
+                <p>Sofía</p>
+            </article>
+
+            <article>
+                <p>⭐⭐⭐⭐⭐</p>
+                <p>El sabor que me recuerda a la infancia, deliciosas.</p>
+                <p>12/09/2025</p>
+                <p>Juan</p>
+            </article>
+
+        </section>
+
     </main>
 
     <footer>
