--- a/search.html
+++ b/search.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Search Results</title>
 
     <link rel="stylesheet" href="./css/styles.css">
 
@@ -13,7 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 </head>
-
 <body>
     <header>
 
@@ -31,14 +29,19 @@
             <section>
 
                 <ul>
-                    <li> <a href="./login.html">Login</a></li>
-                    <li> <a href="./register.html">Registrate</a></li>
+                    <li><a href="./login.html"> <a href="./login.html">Login</a></a></li>
+                    <li><a href="./register.html"> <a href="./register.html">Registrate</a></a></li>
                 </ul>
+
             </section>
+
         </nav>
+
     </header>
 
     <main>
+
+        
         <aside>
             <section>
                 <h3>Categorias</h3>
@@ -71,73 +74,6 @@
             </section>
         </aside>
 
-        <section class="seccionlogin">
-            <h2 class="bienvenido">REGISTRATE</h2>
-
-            <form action="results.html" method="GET">
-
-                <article class="articuloRegistrate">
-
-                    <div>
-                        <label class="texto" for="email">Email:</label>
-                    </div>
-
-                    <div>
-                        <input id="email" type="email" name="mail" value="">
-                    </div>
-
-                    <div>
-                        <label class="texto" for="contraseña">Contraseña:</label>
-                    </div>
-
-                    <div>
-                        <input id="password" type="password" name="pass" value="">
-                    </div>
-
-                    <div>
-                        <label class="texto" for="contraseña">Repetir contraseña:</label>
-                    </div>
-
-                    <div>
-                        <input id="password" type="password" name="pass" value="">
-                    </div>
-
-                    <div>
-                        <button type="submit">Registrarme</button>
-                    </div>
-
-                    <div>
-                        <input type="checkbox" name="hobbies" value="acepto">
-                        <label>Acepto términos y condiciones</label>
-                    </div>
-
-                    <div>
-                        <a href="./login.html">Ya tengo cuenta</a>
-                    </div>
-
-                </article>
-
-            </form>
-
-        </section>
-        
-
     </main>
-
-
-
-
-
-
-    <footer>
-
-        <section>
-            <p>Juliana Markman</p>
-            <p>Ana Clara Nuñez Ibañez</p>
-            <p>Mateo Peña</p>
-        </section>
-
-    </footer>
 </body>
-
 </html>
