Edite css y los html

--- a/category.html
+++ b/category.html
@@ -19,20 +19,20 @@
 
         <nav>
 
-            <section>
+            <section class="secciones_header">
 
-                <ul>
-                    <li> <a href="./index.html"> <img src="./img/logo.png" alt="Logo"></a></li>
-                    <li>Buscar</li>
-                </ul>
+                <ul class="ul_header">
+                    <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
+                    <li> <a class="a_header" href="">Buscar</a></li>
+                </ul> 
 
             </section>
 
-            <section>
+            <section class="secciones_header ir_form">
 
-                <ul>
-                    <li> <a href="./login.html">Login</a></li>
-                    <li> <a href="./register.html">Registrate</a></li>
+                <ul class="ul_header ul_ir_form">
+                    <li><a class="a_header" href="./login.html"> Login</a></li>
+                    <li><a class="a_header" href="./register.html"> Registrate</a></li>
                 </ul>
 
             </section>
@@ -45,91 +45,95 @@
 
         <aside>
             <section>
-                <h3>Categorias</h3>
+                <h3 id="categorias">Categorias</h3>
                 <ul>
-                    <li><a href="./category.html">beauty</a></li>
-                    <li><a href="./category.html">fragrances</a></li>
-                    <li><a href="./category.html">furniture</a></li>
-                    <li><a href="./category.html">groceries</a></li>
-                    <li><a href="./category.html">home decoration</a></li>
-                    <li><a href="./category.html">kitchen accessories</a></li>
-                    <li><a href="./category.html">laptops</a></li>
-                    <li><a href="./category.html">mens shirts</a></li>
-                    <li><a href="./category.html">mens shoes</a></li>
-                    <li><a href="./category.html">mens watches</a></li>
-                    <li><a href="./category.html">mobile accessories</a></li>
-                    <li><a href="./category.html">motorcycle</a></li>
-                    <li><a href="./category.html">skin care</a></li>
-                    <li><a href="./category.html">smartphones</a></li>
-                    <li><a href="./category.html">sports accessories</a></li>
-                    <li><a href="./category.html">sunglasses</a></li>
-                    <li><a href="./category.html">tablets</a></li>
-                    <li><a href="./category.html">tops</a></li>
-                    <li><a href="./category.html">vehicle</a></li>
-                    <li><a href="./category.html">womens bags</a></li>
-                    <li><a href="./category.html">womens dresses</a></li>
-                    <li><a href="./category.html">womens jewellery</a></li>
-                    <li><a href="./category.html">womens shoes</a></li>
-                    <li><a href="./category.html">womens watches</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">beauty</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">fragrances</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">furniture</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">groceries</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">home decoration</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">kitchen accessories</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">laptops</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">mens shirts</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">mens shoes</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">mens watches</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">mobile accessories</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">motorcycle</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">skin care</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">smartphones</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">sports accessories</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">sunglasses</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">tablets</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">tops</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">vehicle</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">womens bags</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">womens dresses</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">womens jewellery</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">womens shoes</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">womens watches</a></li>
                 </ul>
             </section>
         </aside>
 
-        <section>
-            <h2>Groceries</h2>
+        <section class="seccion_cuerpo">
 
-            <article>
+            <article class="titulo">
+                <h2>Groceries</h2>
+            </article>
+            
+
+            <article class="article_productos">
                 <h4>Galletitas Today</h4>
-                <img src="./img/galletitas.jpg" alt="galletitas">
-                <p>Galletitas dulces clásicas, ideales para la merienda.</p>
+                <img  src="./img/galletitas.jpg" alt="galletitas">
+                <p class="descrip_prod">Galletitas dulces clásicas, ideales para la merienda.</p>
                 <p class="precio">$1.500</p>
                 <a class="verDetalle" href="./product.html">Ver detalle</a>
             </article>
 
-            <article>
+            <article class="article_productos">
                 <h4>Leche Entera La Serenísima 1L</h4>
                 <img src="./img/leche.jpg" alt="leche">
-                <p>Leche fresca y natural, ideal para tomar o cocinar.</p>
+                <p class="descrip_prod">Leche fresca y natural, ideal para tomar o cocinar.</p>
                 <p class="precio">$350</p>
                 <a class="verDetalle" href="./product.html">Ver detalle</a>
             </article>
 
-            <article>
+            <article class="article_productos">
                 <h4>Pan de Molde Bimbo</h4>
                 <img src="./img/pan.jpg" alt="pan">
-                <p>Pan suave y esponjoso, perfecto para sandwiches o tostadas.</p>
+                <p class="descrip_prod">Pan suave y esponjoso, perfecto para sandwiches o tostadas.</p>
                 <p class="precio">$500</p>
                 <a class="verDetalle" href="./product.html">Ver detalle</a>
             </article>
 
-            <article>
+            <article class="article_productos">
                 <h4>Arroz Gallo Oro 1kg</h4>
                 <img src="./img/arroz.jpg" alt="arroz">
-                <p>Arroz de calidad premium, ideal para cualquier receta.</p>
+                <p class="descrip_prod">Arroz de calidad premium, ideal para cualquier receta.</p>
                 <p class="precio">$420</p>
                 <a class="verDetalle" href="./product.html">Ver detalle</a>
             </article>
 
-            <article>
+            <article class="article_productos">
                 <h4>Aceite Cocinero 900ml</h4>
                 <img src="./img/aceite.jpg" alt="aceite">
-                <p>Aceite vegetal para freír, cocinar y aderezar tus comidas.</p>
+                <p class="descrip_prod">Aceite vegetal para freír, cocinar y aderezar tus comidas.</p>
                 <p class="precio">$1.800</p>
                 <a class="verDetalle" href="./product.html">Ver detalle</a>
             </article>
 
-            <article>
+            <article class="article_productos">
                 <h4>Fideos Knorr 500g</h4>
                 <img src="./img/fideos.jpg" alt="fideos">
-                <p>Fideos de trigo de alta calidad, ideales para cualquier tipo de pasta.</p>
+                <p class="descrip_prod">Fideos de trigo de alta calidad, ideales para cualquier tipo de pasta.</p>
                 <p class="precio">$300</p>
                 <a class="verDetalle" href="./product.html">Ver detalle</a>
             </article>
 
-            <article>
+            <article class="article_productos">
                 <h4>Azúcar Ledesma 1kg</h4>
                 <img src="./img/azucar.jpg" alt="silla">
-                <p>Azúcar blanca refinada, perfecta para postres y bebidas.</p>
+                <p class="descrip_prod">Azúcar blanca refinada, perfecta para postres y bebidas.</p>
                 <p class="precio">$900</p>
                 <a class="verDetalle" href="./product.html">Ver detalle</a>
             </article>
@@ -141,10 +145,10 @@
 
     <footer>
 
-        <section>
-            <p>Juliana Markman</p>
-            <p>Ana Clara Nuñez Ibañez</p>
-            <p>Mateo Peña</p>
+        <section class="seccion_footer">
+            <p class="p_footer">Juliana Markman</p>
+            <p class="p_footer">Ana Clara Nuñez Ibañez</p>
+            <p class="p_footer">Mateo Peña</p>
         </section>
 
     </footer>
