--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
 
         <nav>
 
-            <section>
+            <section class="secciones_header">
 
-                <ul>
-                    <li> <a href="./index.html"> <img src="./img/logo.png" alt="Logo"></a></li>
-                    <li>Buscar</li>
-                </ul>
+                <ul class="ul_header">
+                    <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
+                    <li> <a class="a_header" href="">Buscar</a></li>
+                </ul> 
 
             </section>
 
-            <section>
+            <section class="secciones_header ir_form">
 
-                <ul>
-                    <li><a href="./login.html"> <a href="./login.html">Login</a></a></li>
-                    <li><a href="./register.html"> <a href="./register.html">Registrate</a></a></li>
+                <ul class="ul_header ul_ir_form">
+                    <li><a class="a_header" href="./login.html"> Login</a></li>
+                    <li><a class="a_header" href="./register.html"> Registrate</a></li>
                 </ul>
 
             </section>
@@ -46,108 +46,119 @@
         
         <aside>
             <section>
-                <h3>Categorias</h3>
+                <h3 id="categorias">Categorias</h3>
                 <ul>
-                    <li><a href="./category.html">beauty</a></li>
-                    <li><a href="./category.html">fragrances</a></li>
-                    <li><a href="./category.html">furniture</a></li>
-                    <li><a href="./category.html">groceries</a></li>
-                    <li><a href="./category.html">home decoration</a></li>
-                    <li><a href="./category.html">kitchen accessories</a></li>
-                    <li><a href="./category.html">laptops</a></li>
-                    <li><a href="./category.html">mens shirts</a></li>
-                    <li><a href="./category.html">mens shoes</a></li>
-                    <li><a href="./category.html">mens watches</a></li>
-                    <li><a href="./category.html">mobile accessories</a></li>
-                    <li><a href="./category.html">motorcycle</a></li>
-                    <li><a href="./category.html">skin care</a></li>
-                    <li><a href="./category.html">smartphones</a></li>
-                    <li><a href="./category.html">sports accessories</a></li>
-                    <li><a href="./category.html">sunglasses</a></li>
-                    <li><a href="./category.html">tablets</a></li>
-                    <li><a href="./category.html">tops</a></li>
-                    <li><a href="./category.html">vehicle</a></li>
-                    <li><a href="./category.html">womens bags</a></li>
-                    <li><a href="./category.html">womens dresses</a></li>
-                    <li><a href="./category.html">womens jewellery</a></li>
-                    <li><a href="./category.html">womens shoes</a></li>
-                    <li><a href="./category.html">womens watches</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">beauty</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">fragrances</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">furniture</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">groceries</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">home decoration</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">kitchen accessories</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">laptops</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">mens shirts</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">mens shoes</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">mens watches</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">mobile accessories</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">motorcycle</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">skin care</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">smartphones</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">sports accessories</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">sunglasses</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">tablets</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">tops</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">vehicle</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">womens bags</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">womens dresses</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">womens jewellery</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">womens shoes</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">womens watches</a></li>
                 </ul>
             </section>
         </aside>
 
-        <section>
-            <h2>Productos</h2>
+        <section class="seccion_cuerpo">
+            
+            <article class="titulo">
+                <h2>Productos</h2>
+            </article>
 
-            <article>
+            <article class="article_productos">
                 <h4>Camisa Blanca</h4>
                 <img src="./img/camisa.jpeg" alt="camisa">
-                <p>Camisa de algodón clásica, manga larga.</p>
+                <p class="descrip_prod">Camisa de algodón clásica, manga larga.</p>
                 <p class="precio">$22.000</p>
                 <a class="verDetalle" href="./product.html">Ver detalle</a>
             </article>
 
-            <article>
+            <article class="article_productos">
                 <h4>Crema Cera Ve</h4>
                 <img src="./img/crema.jpg" alt="crema">
-                <p>Crema ligera que nutre y suaviza la piel.</p>
+                <p class="descrip_prod">Crema ligera que nutre y suaviza la piel.</p>
                 <p class="precio">$8.500</p>
                 <a class="verDetalle" href="./product.html">Ver detalle</a>
             </article>
 
-            <article>
+            <article class="article_productos">
                 <h4>Juego de cuchillos</h4>
                 <img src="./img/cuchillos.jpg" alt="cuchillos">
-                <p>Set de cuchillos de acero inoxidable.</p>
+                <p class="descrip_prod">Set de cuchillos de acero inoxidable.</p>
                 <p class="precio">$18.000</p>
                 <a class="verDetalle" href="./product.html">Ver detalle</a>
-            </article>
+            </article class="article_productos">
 
-            <article>
+            <article class="article_productos">
                 <h4>Galletitas Today</h4>
                 <img src="./img/galletitas.jpg" alt="galletitas">
-                <p>Galletitas dulces clásicas, ideales para la merienda.</p>
+                <p class="descrip_prod">Galletitas dulces clásicas, ideales para la merienda.</p>
                 <p class="precio">$1.500</p>
                 <a class="verDetalle" href="./product.html">Ver detalle</a>
-            </article>
+            </article class="article_productos">
 
-            <article>
+            <article class="article_productos">
                 <h4>Mochila Tropea</h4>
                 <img src="./img/mochila.jpg" alt="mochila">
-                <p>Mochila negra de tela con varios bolsillos.</p>
+                <p class="descrip_prod">Mochila negra de tela con varios bolsillos.</p>
                 <p class="precio">$34.500</p>
                 <a class="verDetalle" href="./product.html">Ver detalle</a>
             </article>
 
-            <article>
+            <article class="article_productos">
                 <h4>Perfume de Hombre</h4>
                 <img src="./img/perfume.jpg" alt="perfume">
-                <p>Fragancia floral con notas frescas y elegantes.</p>
+                <p class="descrip_prod">Fragancia floral con notas frescas y elegantes.</p>
                 <p class="precio">$25.000</p>
                 <a class="verDetalle" href="./product.html">Ver detalle</a>
             </article>
 
-            <article>
+            <article class="article_productos">
                 <h4>Silla Gamer</h4>
                 <img src="./img/silla_gamer.jfif" alt="silla">
-                <p>Silla ergonómica con apoyabrazos y respaldo reclinable.</p>
+                <p class="descrip_prod">Silla ergonómica con apoyabrazos y respaldo reclinable.</p>
                 <p class="precio">$95.000</p>
                 <a class="verDetalle" href="./product.html">Ver detalle</a>
             </article>
 
-            <article>
+            <article class="article_productos">
                 <h4>Tablet Lenovo</h4>
                 <img src="./img/tablet.jpg" alt="tablet">
-                <p>Pantalla 10”, ideal para estudio y entretenimiento.</p>
+                <p class="descrip_prod">Pantalla 10”, ideal para estudio y entretenimiento.</p>
                 <p class="precio">$180.000</p>
                 <a class="verDetalle" href="./product.html">Ver detalle</a>
             </article>
 
-            <article>
-                <h4>Vestido Azul</h4>
+            <article class="article_productos">
+                <h4>Vestido Rojo</h4>
                 <img src="./img/vestido.jpg" alt="vestido">
-                <p>Vestido corto azul, estilo casual.</p>
+                <p class="descrip_prod">Vestido corto rojo, estilo casual.</p>
                 <p class="precio">$26.000</p>
+                <a class="verDetalle" href="./product.html">Ver detalle</a>
+            </article>
+
+            <article class="article_productos">
+                <h4>Zapatillas deportivas Nike</h4>
+                <img src="./img/zapatillas.jpg" alt="zapatillas">
+                <p class="descrip_prod">Zapatillas deportivas negras con suela antideslizante.</p>
+                <p class="precio">$65.000</p>
                 <a class="verDetalle" href="./product.html">Ver detalle</a>
             </article>
 
@@ -157,10 +168,10 @@
 
     <footer>
 
-        <section>
-            <p>Juliana Markman</p>
-            <p>Ana Clara Nuñez Ibañez</p>
-            <p>Mateo Peña</p>
+        <section class="seccion_footer">
+            <p class="p_footer">Juliana Markman</p>
+            <p class="p_footer">Ana Clara Nuñez Ibañez</p>
+            <p class="p_footer">Mateo Peña</p>
         </section>
 
     </footer>
