--- a/search.html
+++ b/search.html
@@ -17,20 +17,20 @@
 
         <nav>
 
-            <section>
+            <section class="secciones_header">
 
-                <ul>
-                    <li> <a href="./index.html"> <img src="./img/logo.png" alt="Logo"></a></li>
-                    <li>Buscar</li>
-                </ul>
+                <ul class="ul_header">
+                    <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
+                    <li> <a class="a_header" href="">Buscar</a></li>
+                </ul> 
 
             </section>
 
-            <section>
+            <section class="secciones_header ir_form">
 
-                <ul>
-                    <li><a href="./login.html"> <a href="./login.html">Login</a></a></li>
-                    <li><a href="./register.html"> <a href="./register.html">Registrate</a></a></li>
+                <ul class="ul_header ul_ir_form">
+                    <li><a class="a_header" href="./login.html"> Login</a></li>
+                    <li><a class="a_header" href="./register.html"> Registrate</a></li>
                 </ul>
 
             </section>
@@ -44,36 +44,46 @@
         
         <aside>
             <section>
-                <h3>Categorias</h3>
+                <h3  id="categorias">Categorias</h3>
                 <ul>
-                    <li><a href="./category.html">beauty</a></li>
-                    <li><a href="./category.html">fragrances</a></li>
-                    <li><a href="./category.html">furniture</a></li>
-                    <li><a href="./category.html">groceries</a></li>
-                    <li><a href="./category.html">home decoration</a></li>
-                    <li><a href="./category.html">kitchen accessories</a></li>
-                    <li><a href="./category.html">laptops</a></li>
-                    <li><a href="./category.html">mens shirts</a></li>
-                    <li><a href="./category.html">mens shoes</a></li>
-                    <li><a href="./category.html">mens watches</a></li>
-                    <li><a href="./category.html">mobile accessories</a></li>
-                    <li><a href="./category.html">motorcycle</a></li>
-                    <li><a href="./category.html">skin care</a></li>
-                    <li><a href="./category.html">smartphones</a></li>
-                    <li><a href="./category.html">sports accessories</a></li>
-                    <li><a href="./category.html">sunglasses</a></li>
-                    <li><a href="./category.html">tablets</a></li>
-                    <li><a href="./category.html">tops</a></li>
-                    <li><a href="./category.html">vehicle</a></li>
-                    <li><a href="./category.html">womens bags</a></li>
-                    <li><a href="./category.html">womens dresses</a></li>
-                    <li><a href="./category.html">womens jewellery</a></li>
-                    <li><a href="./category.html">womens shoes</a></li>
-                    <li><a href="./category.html">womens watches</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">beauty</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">fragrances</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">furniture</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">groceries</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">home decoration</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">kitchen accessories</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">laptops</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">mens shirts</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">mens shoes</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">mens watches</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">mobile accessories</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">motorcycle</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">skin care</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">smartphones</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">sports accessories</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">sunglasses</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">tablets</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">tops</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">vehicle</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">womens bags</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">womens dresses</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">womens jewellery</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">womens shoes</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">womens watches</a></li>
                 </ul>
             </section>
         </aside>
 
     </main>
+
+    <footer>
+
+        <section class="seccion_footer">
+            <p class="p_footer">Juliana Markman</p>
+            <p class="p_footer">Ana Clara Nuñez Ibañez</p>
+            <p class="p_footer">Mateo Peña</p>
+        </section>
+
+    </footer>
 </body>
 </html>
