--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </article class="article_productos">
 
             <article class="article_productos">
-                <h4>Galletitas Today</h4>
+                <h4>Galletitas Toddy</h4>
                 <img src="./img/galletitas.jpg" alt="galletitas">
                 <p class="descrip_prod">Galletitas dulces clásicas, ideales para la merienda.</p>
                 <p class="precio">$1.500</p>
