Hice los cambios que me habia olvidado

--- a/product.html
+++ b/product.html
@@ -137,7 +137,7 @@
 
                 <article class="art_comentarios">
                     <p>⭐⭐⭐⭐⭐</p>
-                    <p>Crujientes y dulces justo como me gustan. Las compro siempre.</p>
+                    <p>Crujientes y dulces justo como me gustan.</p>
                     <p>07/09/2025</p>
                     <p>Martín</p>
                 </article>
