--- a/product.html
+++ b/product.html
@@ -46,30 +46,30 @@
             <section>
                 <h3  id="categorias">Categorias</h3>
                 <ul>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">beauty</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">fragrances</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">furniture</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">groceries</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">home decoration</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">kitchen accessories</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">laptops</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">mens shirts</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">mens shoes</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">mens watches</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">mobile accessories</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">motorcycle</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">skin care</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">smartphones</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">sports accessories</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">sunglasses</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">tablets</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">tops</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">vehicle</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">womens bags</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">womens dresses</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">womens jewellery</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">womens shoes</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">womens watches</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Beauty</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Fragrances</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Furniture</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Groceries</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Home decoration</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Kitchen accessories</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Laptops</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Mens shirts</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Mens shoes</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Mens watches</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Mobile accessories</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Motorcycle</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Skin care</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Smartphones</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Sports accessories</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Sunglasses</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Tablets</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Tops</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Vehicle</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Womens bags</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Womens dresses</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Womens jewellery</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Womens shoes</a></li>
+                    <li class="li_aside"><a class="a_aside" href="./category.html">Womens watches</a></li>
                 </ul>
             </section>
         </aside>
