--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <aside>
             <section>
                 <h3 id="categorias">Categorias</h3>
-                <ul>
+                <ul class="ulAside">
                     <li class="li_aside"><a class="a_aside" href="./category.html">Beauty</a></li>
                     <li class="li_aside"><a class="a_aside" href="./category.html">Fragrances</a></li>
                     <li class="li_aside"><a class="a_aside" href="./category.html">Furniture</a></li>
