--- a/register.html
+++ b/register.html
@@ -85,7 +85,7 @@
                     </div>
 
                     <div>
-                        <input id="email" type="email" name="mail" value="">
+                        <input class="input" id="email" type="email" name="mail" value="">
                     </div>
 
                     <div>
@@ -93,7 +93,7 @@
                     </div>
 
                     <div>
-                        <input id="password" type="password" name="pass" value="">
+                        <input class="input" id="password" type="password" name="pass" value="">
                     </div>
 
                     <div>
@@ -101,7 +101,7 @@
                     </div>
 
                     <div>
-                        <input id="password" type="password" name="pass" value="">
+                        <input class="input" id="password" type="password" name="pass" value="">
                     </div>
 
                     <div>
